-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Cluster Scalability
-
Fully Compatible
-
v8.1, v8.0
-
ClusterScalability Aug4-18
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The meaning of this error was modified slightly as a result of refactoring in the network interface code. It is now considered a general timeout error, and we should not always make the server unavailable if this error occurs.
- depends on
-
SERVER-80020 The exhaustiveFindOnConfig() method should retry on NetworkInterfaceExceededTimeLimit errors
-
- Backlog
-
-
SERVER-79888 find/getMore timeouts triggered by Fetcher always reported as NetworkInterfaceExceededTimeLimit
-
- Closed
-
-
SERVER-81877 Use MaxTimeMsExpired in ShardRemote::_scheduleCommand if pass maxTimeMs for timeout
-
- Closed
-
- is related to
-
SERVER-72055 NetworkInterfaceTL should by default return a retryable error when it times out waiting to acquire a connection
-
- Closed
-
-
SERVER-109023 Require specification of timeoutCode when timeout is specified in RemoteCommandRequest
-
- Blocked
-