SERVER-90622 Do not mark host as failed on NetworkInterfaceExceededTimeLimit (#39984)

GitOrigin-RevId: d35a4a0f22b006f4b717fea446aa661e96db43df